# scrapes

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  get.sh  headers.txt
data/: example.html
src/: main.py  main.rs
