[package]
name = "iowascrape"
version = "0.1.0"
authors = ["jafow <jared.a.fowler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.3"
libflate = "1.0.2"
scraper = "0.12.0"
select = "0.5.0"
surf = "2.0.0-alpha.4"
